Cambios en página de inicio

--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
             <div class="row">
                 <div class="col-lg-12">
 
-                    <h4  id="footer-ds">hecho con <i class="fas fa-heart"></i> por <a id=""href="www.digitalsides.com">digital sides</a></h4>
+                    <h4  id="footer-ds">hecho con <i class="fas fa-heart ds-heart"></i> por <a id=""href="www.digitalsides.com">digital sides</a></h4>
 
                     <h4 class="footer-text" >Copyright &copy; 2019  Express Valle de Saltillo. S.A. de C.V.</h4>
 
