--- a/servicios/index.html
+++ b/servicios/index.html
@@ -24,10 +24,10 @@
                         <div class="collapse navbar-collapse" id="navbarSupportedContent">
                           <ul class="navbar-nav ml-auto">
                             <li class="nav-item active">
-                              <a class="nav-link" href="#">Inicio <span class="sr-only">(current)</span></a>
+                              <a class="nav-link" href="/">Inicio <span class="sr-only">(current)</span></a>
                             </li>
                             <li class="nav-item">
-                              <a class="nav-link" href="#">Servicios</a>
+                              <a class="nav-link" href="">Servicios</a>
                             </li>
                             <li class="nav-item">
                               <a class="nav-link" href="#">Socios Comerciales</a>
@@ -61,8 +61,69 @@
                 </div>
             </div>
         </div>
+    </section>
 
     <section id="showcase-servicios">
+        <div class="row">
+            <div class="col-lg-5 img-servicios">
+                  <img src="img/image-example.png">
+            </div>
+            <div class="col-lg-7 desc-servicios">
+                <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
+                        incididunt ut labore et dolore magna aliqua. A arcu cursus vitae congue mauris 
+                        rhoncus aenean vel elit. Dignissim suspendisse in est ante in nibh mauris.                
+                </p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-7 desc-servicios">
+            <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
+                    incididunt ut labore et dolore magna aliqua. A arcu cursus vitae congue mauris 
+                    rhoncus aenean vel elit. Dignissim suspendisse in est ante in nibh mauris.                
+            </p>
+          </div>
+          <div class="col-lg-5 img-servicios">
+                <img src="img/image-example.png">
+          </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-5 img-servicios">
+                  <img src="img/image-example.png">
+            </div>
+            <div class="col-lg-7 desc-servicios">
+                <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
+                        incididunt ut labore et dolore magna aliqua. A arcu cursus vitae congue mauris 
+                        rhoncus aenean vel elit. Dignissim suspendisse in est ante in nibh mauris.                
+                </p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-7 desc-servicios">
+            <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
+                    incididunt ut labore et dolore magna aliqua. A arcu cursus vitae congue mauris 
+                    rhoncus aenean vel elit. Dignissim suspendisse in est ante in nibh mauris.                
+            </p>
+          </div>
+          <div class="col-lg-5 img-servicios">
+                <img src="img/image-example.png">
+          </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-5 img-servicios">
+                  <img src="img/image-example.png">
+            </div>
+            <div class="col-lg-7 desc-servicios">
+                <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
+                        incididunt ut labore et dolore magna aliqua. A arcu cursus vitae congue mauris 
+                        rhoncus aenean vel elit. Dignissim suspendisse in est ante in nibh mauris.                
+                </p>
+            </div>
+        </div>
 
     </section>
 
