--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
                 <video loop muted autoplay poster="img/videoframe.jpg" class="fullscreen-bg__video">
                     <source src="img/Rest_and_Play.mp4" type="video/mp4">
                 </video>
-                <button type="button" class="btn btn-primary btn-lg btn-contact-us">Enviar</button> 
                 <button type="button" class="btn btn-primary btn-lg btn-header-1">Contáctanos</button>
+                <button type="button" class="btn btn-primary btn-lg btn-header-2">Cotizador</button>
             </div>
               
         </header>
