nuevo color - inicio

--- a/servicios/index.html
+++ b/servicios/index.html
@@ -131,7 +131,7 @@
 
 
 
-    <!-- <footer>
+    <footer>
             <div class="row">
                 <div class=" col-lg-6">
                     <ul class="footer-nav">
@@ -163,10 +163,7 @@
                 </div>
             </div>
                 
-        </footer> -->
-
-
-
+        </footer>
 
 
 
