--- a/servicios/index.html
+++ b/servicios/index.html
@@ -69,6 +69,7 @@
                   <img src="img/image-example.png">
             </div>
             <div class="col-lg-7 desc-servicios">
+                <h3>Servicio</h3>
                 <p>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
                         incididunt ut labore et dolore magna aliqua. A arcu cursus vitae congue mauris 
@@ -78,6 +79,7 @@
         </div>
         <div class="row">
             <div class="col-lg-7 desc-servicios">
+            <h3>Servicio</h3>
             <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
                     incididunt ut labore et dolore magna aliqua. A arcu cursus vitae congue mauris 
@@ -93,6 +95,7 @@
                   <img src="img/image-example.png">
             </div>
             <div class="col-lg-7 desc-servicios">
+                <h3>Servicio</h3>
                 <p>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
                         incididunt ut labore et dolore magna aliqua. A arcu cursus vitae congue mauris 
@@ -102,11 +105,12 @@
         </div>
         <div class="row">
             <div class="col-lg-7 desc-servicios">
-            <p>
+                <h3>Servicio</h3>
+                <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
                     incididunt ut labore et dolore magna aliqua. A arcu cursus vitae congue mauris 
                     rhoncus aenean vel elit. Dignissim suspendisse in est ante in nibh mauris.                
-            </p>
+                </p>
           </div>
           <div class="col-lg-5 img-servicios">
                 <img src="img/image-example.png">
@@ -117,6 +121,7 @@
                   <img src="img/image-example.png">
             </div>
             <div class="col-lg-7 desc-servicios">
+                <h3>Servicio</h3>
                 <p>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
                         incididunt ut labore et dolore magna aliqua. A arcu cursus vitae congue mauris 
