--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                                 <a class="nav-link" href="#">Cotizador</a>
                                 </li>
                                 <li class="nav-item">
-                                <a class="nav-link" href="#">Contacto</a>
+                                <a class="nav-link" href="contacto">Contacto</a>
                                 </li>
                             </ul>
                             </div>
