cambios en contacto

--- a/contacto/index.html
+++ b/contacto/index.html
@@ -75,6 +75,23 @@
 
 
     <section id="formulario">
+        <div class="row">
+            <div class="col-lg-12">
+                    <h3 class="contact-form-header">Contáctanos</h3>
+                    <div class="row form-box">                    
+                            <input  class="form-input" type="text" name="name" id="name" placeholder="Tu nombre" required>                    
+                    </div>
+                    <div class="row form-box">
+                            <input class="form-input" type="email" name="email" id="email" placeholder="Tu e-mail" required>       
+                    </div>
+                    <div class="row form-box">            
+                            <textarea class="form-input" name="message" placeholder="Tu Mensaje"></textarea>             
+                    </div>
+                    <div class="row form-box">            
+                            <a class="btn btn-ghost btn-contact-us" href="#"> ENVIAR </a>          
+                    </div>
+            </div>
+        </div>
 
     </section>
 
