--- a/servicios/index.html
+++ b/servicios/index.html
@@ -18,7 +18,7 @@
                     
                     <div class="container-fluid">
                     <nav class="navbar sticky-top navbar-expand-lg ">
-                            <img class="navbar-brand logo" src="img/IMG-0246.PNG"></img>
+                            <img class="navbar-brand logo" src="../resources/img/IMG-0246.PNG"></img>
                             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon"></span>
                             </button>
@@ -26,7 +26,7 @@
                             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                             <ul class="navbar-nav ml-auto">
                                 <li class="nav-item active">
-                                <a class="nav-link" href="#">Inicio <span class="sr-only">(current)</span></a>
+                                <a class="nav-link" href="../">Inicio <span class="sr-only">(current)</span></a>
                                 </li>
                                 <li class="nav-item">
                                 <a class="nav-link" href="servicios">Servicios</a>
@@ -35,7 +35,7 @@
                                 <a class="nav-link" href="#">Cotizador</a>
                                 </li>
                                 <li class="nav-item">
-                                <a class="nav-link" href="#">Contacto</a>
+                                <a class="nav-link" href="../contacto">Contacto</a>
                                 </li>
                             </ul>
                             </div>
@@ -68,7 +68,7 @@
     <section id="showcase-servicios">
         <div class="row">
             <div class="col-lg-5 img-servicios">
-                  <img src="img/image-example.png">
+                  <img src="../resources/img/image-example.png">
             </div>
             <div class="col-lg-7 desc-servicios">
                 <h3>Servicio</h3>
@@ -89,7 +89,7 @@
             </p>
           </div>
           <div class="col-lg-5 img-servicios">
-                <img src="img/image-example.png">
+                <img src="../resources/img/image-example.png">
           </div>
         </div>
         <div class="row">
@@ -115,12 +115,12 @@
                 </p>
           </div>
           <div class="col-lg-5 img-servicios">
-                <img src="img/image-example.png">
+                <img src="../resources/img/image-example.png">
           </div>
         </div>
         <div class="row">
             <div class="col-lg-5 img-servicios">
-                  <img src="img/image-example.png">
+                  <img src="../resources/img/image-example.png">
             </div>
             <div class="col-lg-7 desc-servicios">
                 <h3>Servicio</h3>
@@ -144,7 +144,6 @@
                     <ul class="footer-nav">
                         <li><a href="#"> Inicio  </a></li>
                         <li><a href="#"> Servicios</a></li>
-                        <li><a href="#"> Socios Comerciales</a></li>
                         <li><a href="#"> Cotizador</a></li>
                         <li><a href="#"> Contacto</a></li>
                     </ul>
