--- a/contacto/index.html
+++ b/contacto/index.html
@@ -42,7 +42,7 @@
                                 <a class="nav-link" href="/">Inicio <span class="sr-only">(current)</span></a>
                                 </li>
                                 <li class="nav-item">
-                                <a class="nav-link" href="servicios">Servicios</a>
+                                <a class="nav-link" href="../servicios">Servicios</a>
                                 </li>
                                 <li class="nav-item">
                                 <a class="nav-link" href="#">Cotizador</a>
