gradientes de color azul

--- a/contacto/index.html
+++ b/contacto/index.html
@@ -72,7 +72,7 @@
                     </p>
                 </div>
             </div>
-            <div class="row cd">
+            <div class="row cd cdmx-cd">
                     <div class="col-lg-12 cdmx">
                             <span class="ciudad"> CDMX </span> <br>
                         <p class="info-ciudad">
@@ -141,7 +141,7 @@
 					</div>
 				</form>
 			</div>
-		</div>`
+		</div>
 	</div>
 
 
@@ -150,7 +150,7 @@
 
 
 
-
+ 
 
 
 
