--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                     <iframe id="ubicacion1" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3595.7612403273897!2d-100.37164808457119!3d25.679208283674285!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x86629618fd598e2b%3A0xa1c35f57b2e34240!2sAv.+Anillo+Periferico+409%2C+Rinc%C3%B3n+de+Las+Colinas%2C+64633+Monterrey%2C+N.L.!5e0!3m2!1ses-419!2smx!4v1564011219277!5m2!1ses-419!2smx" width="100%" height="100%" frameborder="0" style="border:0" allowfullscreen></iframe>
                     <!-- <iframe id="ubicacion2" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3733.938167857155!2d-87.06726868464867!3d20.63137698621502!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85c344388019a353%3A0xae2213a4cbf2bf49!2sMamita&#39;s+Beach+Club!5e0!3m2!1ses-419!2smx!4v1564011603602!5m2!1ses-419!2smx" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe> -->
             </div>
-            <div class="col-lg-4">
+            <div class="col-lg-4 ">
                     <h3 class="contact-form-header">Oficinas</h3>
                     <div class="row">
                         <div class="col-lg-6 ubicaciones">
@@ -226,6 +226,9 @@
                                     <li>Tel. (55)5587-8977</li>
                                 </ul>
                             </div>
+                    </div>
+                    <div class="row img-contacto">
+                        
                     </div>
             </div>
             <div class="col-lg-3">
