--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="resources/styles.css" />
+    <link rel="stylesheet" href="resources/queries.css" />
   </head>
   <body>
     <!-- HERO IMAGE / VIDEO -->
@@ -45,7 +46,7 @@
               <span class="navbar-toggler-icon"></span>
             </button>
 
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <div class="collapse sticky-top navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
                   <a class="nav-link active" href="#"
@@ -261,7 +262,7 @@
         </div>
         <div class="col-lg-4 ">
           <h3 class="contact-form-header">Oficinas</h3>
-          <div class="row">
+          <div class="row cuadro-ubicaciones">
             <div class="col-lg-6 ubicaciones">
               <h4>SALTILLO</h4>
               <ul>
@@ -284,7 +285,7 @@
               </ul>
             </div>
           </div>
-          <div class="row img-contacto"></div>
+          
         </div>
         <div class="col-lg-3">
           <h3 class="contact-form-header">Contáctanos</h3>
