--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     <!-- HERO IMAGE / VIDEO -->
     <section id="hero">
       <header>
-        <div class="container-fluid">
-          <nav class="navbar sticky-top navbar-expand-lg">
+        
+          <nav class="navbar navbar-expand-lg sticky-top navbar-dark">
             <img
               class="navbar-brand logo"
               src="resources/img/Logo-Blanco-Exvasa.png"
@@ -46,7 +46,7 @@
               <span class="navbar-toggler-icon"></span>
             </button>
 
-            <div class="collapse sticky-top navbar-collapse" id="navbarSupportedContent">
+            <div class=" collapse sticky-top navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
                   <a class="nav-link active" href="#"
@@ -65,7 +65,7 @@
               </ul>
             </div>
           </nav>
-        </div>
+        
 
         <div class="hero-text-box">
           <h1>
