--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
             Tu solución en logistica <br />
             Excelencia en logística
           </h1>
-          <a class="btn btn-full btn-header-1" href="#"> Contáctanos </a>
-          <a class="btn btn-full btn-header-2" href="#"> Cotizador </a>
+          <a class="btn btn-full btn-header btn-header-1" href="#"> Contáctanos </a>
+          <a class="btn btn-full btn-header btn-header-2" href="#"> Cotizador </a>
         </div>
       </header>
     </section>
@@ -248,7 +248,7 @@
 
     <section id="contact">
       <div class="row contact-2">
-        <div class="col-lg-5">
+        <div class="mapa col-lg-5 col-md-12">
           <iframe
             id="ubicacion1"
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3595.7612403273897!2d-100.37164808457119!3d25.679208283674285!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x86629618fd598e2b%3A0xa1c35f57b2e34240!2sAv.+Anillo+Periferico+409%2C+Rinc%C3%B3n+de+Las+Colinas%2C+64633+Monterrey%2C+N.L.!5e0!3m2!1ses-419!2smx!4v1564011219277!5m2!1ses-419!2smx"
@@ -260,11 +260,11 @@
           ></iframe>
           <!-- <iframe id="ubicacion2" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3733.938167857155!2d-87.06726868464867!3d20.63137698621502!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85c344388019a353%3A0xae2213a4cbf2bf49!2sMamita&#39;s+Beach+Club!5e0!3m2!1ses-419!2smx!4v1564011603602!5m2!1ses-419!2smx" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe> -->
         </div>
-        <div class="col-lg-4 ">
+        <div class="col-lg-4 col-md-12">
           <h3 class="contact-form-header">Oficinas</h3>
           <div class="row cuadro-ubicaciones">
             <div class="col-lg-6 ubicaciones">
-              <h4>SALTILLO</h4>
+              <h4 class="ciudad">SALTILLO</h4>
               <ul>
                 <li>Blvd. de convenciones No. 201</li>
                 <li>Fracc. Puerta de Ote</li>
@@ -273,8 +273,8 @@
                 <li>Tel. (844) 413-1313.</li>
               </ul>
             </div>
-            <div class="col-lg-6 ubicaciones">
-              <h4>CDMX</h4>
+            <div class="col-lg-6 col-md-12 ubicaciones">
+              <h4 class="ciudad">CDMX</h4>
               <ul>
                 <li>Poniente 122 No. 705</li>
                 <li>Col. Industrial Vallejo</li>
@@ -324,8 +324,8 @@
     </section>
 
     <footer>
-      <div class="row">
-        <div class=" col-lg-6">
+      <div class="row footer-1-row">
+        <div class=" col-lg-6 col-md-6">
           <ul class="footer-nav">
             <li><a href="#"> Inicio </a></li>
             <li><a href="#"> Servicios</a></li>
@@ -334,7 +334,7 @@
           </ul>
         </div>
 
-        <div class="col-lg-6">
+        <div class="col-lg-6 col-md-6">
           <ul class="social-links">
             <li>
               <a href="#"><i class="fab fa-facebook-f"></i></a>
