--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
 
     <footer>
       <div class="row footer-1-row">
-        <div class=" col-lg-6 col-md-6">
+        <div class=" col-lg-6 col-md-6 col-sm-12">
           <ul class="footer-nav">
             <li><a href="#"> Inicio </a></li>
             <li><a href="#"> Servicios</a></li>
@@ -334,7 +334,7 @@
           </ul>
         </div>
 
-        <div class="col-lg-6 col-md-6">
+        <div class="col-lg-6 col-md-6 col-sm-12">
           <ul class="social-links">
             <li>
               <a href="#"><i class="fab fa-facebook-f"></i></a>
@@ -352,7 +352,7 @@
         <div class="col-lg-12">
           <h4 id="footer-ds">
             hecho con <i class="fas fa-heart ds-heart"></i> por
-            <a id="" href="www.digitalsides.com">digital sides</a>
+            <a id="" href="http://www.digitalsides.com" target="_blank">digital sides</a>
           </h4>
 
           <h4 class="footer-text">
