nuevas imágenes de servicios

--- a/index.html
+++ b/index.html
@@ -108,44 +108,34 @@
       <ul class="soluciones-showcase clearfix">
         <li>
           <figure class="soluciones-img">
-            <img src="resources/img/64825.jpg" />
+            <img src="resources/img/Almacenamiento.png" />
           </figure>
         </li>
         <li>
           <figure class="soluciones-img">
-            <img src="resources/img/64825.jpg" />
+            <img src="resources/img/Asesoramiento.png" />
           </figure>
         </li>
         <li>
           <figure class="soluciones-img">
-            <img src="resources/img/64825.jpg" />
-          </figure>
-        </li>
-        <li>
-          <figure class="soluciones-img">
-            <img src="resources/img/64825.jpg" />
+            <img src="resources/img/Dedicados.png" />
           </figure>
         </li>
       </ul>
-      <ul class="soluciones-showcase clearfix">
+      <ul class="soluciones-showcase">
         <li>
           <figure class="soluciones-img">
-            <img src="resources/img/64825.jpg" />
+              <img src="resources/img/Paqueteria.png" />
           </figure>
         </li>
         <li>
           <figure class="soluciones-img">
-            <img src="resources/img/64825.jpg" />
+            <img src="resources/img/personal.png" />
           </figure>
         </li>
         <li>
           <figure class="soluciones-img">
-            <img src="resources/img/64825.jpg" />
-          </figure>
-        </li>
-        <li>
-          <figure class="soluciones-img">
-            <img src="resources/img/64825.jpg" />
+            <img src="resources/img/renta.png" />
           </figure>
         </li>
       </ul>
