testing Zeit.co

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Express Valle de Saltillo</title>
+    <title>Express Valle de Saltillooooo</title>
     <link
       href="https://fonts.googleapis.com/css?family=Dawning+of+a+New+Day|Lato:300,400&display=swap"
       rel="stylesheet"
@@ -86,10 +86,10 @@
         <span class="divider"></span>
         <div class="row about-us-row">
           <div class="col-lg-6 about-us-col about-us-col-1">
-            <img class="about-us-icon" src="resources/img/Cajita_Abierta.png" />
+            <img class="about-us-icon" src="resources/img/ttt.png" />
           </div>
           <div class="col-lg-6  about-us-col about-us-col-2">
-            <p class="section-text">
+            <p class="about-us-text">
               Exvasa cuenta con mas de 50 años de experiencia en la industria
               del transporte terrestre, teniendo como prioridad la satisfacción
               de nuestros clientes por medio de sociedades estratégicas.
