--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Express Valle de Saltillooooo</title>
+    <title>Express Valle de Saltillo</title>
     <link
       href="https://fonts.googleapis.com/css?family=Dawning+of+a+New+Day|Lato:300,400&display=swap"
       rel="stylesheet"
@@ -122,7 +122,7 @@
           </figure>
         </li>
       </ul>
-      <ul class="soluciones-showcase">
+      <ul class="soluciones-showcase clearfix">
         <li>
           <figure class="soluciones-img">
               <img src="resources/img/Paqueteria.png" />
@@ -253,7 +253,7 @@
         <div class="col-lg-4 col-md-12">
           <h3 class="contact-form-header">Oficinas</h3>
           <div class="row cuadro-ubicaciones">
-            <div class="col-lg-6 ubicaciones">
+            <div class="col-lg-6 col-md-6 col-sm-6 ubicaciones">
               <h4 class="ciudad">SALTILLO</h4>
               <ul>
                 <li>Blvd. de convenciones No. 201</li>
@@ -263,7 +263,7 @@
                 <li>Tel. (844) 413-1313.</li>
               </ul>
             </div>
-            <div class="col-lg-6 col-md-12 ubicaciones">
+            <div class="col-lg-6 col-md-6 col-sm-6 ubicaciones">
               <h4 class="ciudad">CDMX</h4>
               <ul>
                 <li>Poniente 122 No. 705</li>
@@ -278,7 +278,7 @@
           
         </div>
         <div class="col-lg-3">
-          <h3 class="contact-form-header">Contáctanos</h3>
+          <h3 class="contact-form-header contact-header">Contáctanos</h3>
           <div class="row form-box">
             <input
               class="form-input"
@@ -315,7 +315,7 @@
 
     <footer>
       <div class="row footer-1-row">
-        <div class=" col-lg-6 col-md-6 col-sm-12">
+        <div class=" col-lg-6 col-md-6 col-sm-12 footer-box">
           <ul class="footer-nav">
             <li><a href="#"> Inicio </a></li>
             <li><a href="#"> Servicios</a></li>
@@ -324,7 +324,7 @@
           </ul>
         </div>
 
-        <div class="col-lg-6 col-md-6 col-sm-12">
+        <div class="col-lg-6 col-md-6 col-sm-12 social-box">
           <ul class="social-links">
             <li>
               <a href="#"><i class="fab fa-facebook-f"></i></a>
