nuevas imagenes de inicio

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <span class="divider"></span>
         <div class="row about-us-row">
           <div class="col-lg-6 about-us-col about-us-col-1">
-            <img class="about-us-icon" src="resources/img/ttt.png" />
+            <img class="about-us-icon" src="resources/img/camion-about-us.png" />
           </div>
           <div class="col-lg-6  about-us-col about-us-col-2">
             <p class="about-us-text">
