--- a/servicios/index.html
+++ b/servicios/index.html
@@ -22,49 +22,48 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="queries.css" />
   </head>
   <body>
     <!-- HERO IMAGE / VIDEO -->
     <section id="hero">
       <header>
-        <div class="container-fluid">
-          <nav class="navbar sticky-top navbar-expand-lg ">
-            <img
-              class="navbar-brand logo"
-              src="../resources/img/IMG-0246.PNG"
-            />
-            <button
-              class="navbar-toggler"
-              type="button"
-              data-toggle="collapse"
-              data-target="#navbarSupportedContent"
-              aria-controls="navbarSupportedContent"
-              aria-expanded="false"
-              aria-label="Toggle navigation"
-            >
-              <span class="navbar-toggler-icon"></span>
-            </button>
+        <nav class="navbar navbar-expand-lg sticky-top navbar-light">
+          <img
+            class="navbar-brand logo"
+            src="../resources/img/IMG-0246.PNG"
+          />
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-toggle="collapse"
+            data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
 
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav ml-auto">
-                <li class="nav-item active">
-                  <a class="nav-link" href="/"
-                    >Inicio <span class="sr-only">(current)</span></a
-                  >
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="servicios">Servicios</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Cotizador</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="../contacto">Contacto</a>
-                </li>
-              </ul>
-            </div>
-          </nav>
-        </div>
+          <div class=" collapse sticky-top navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ml-auto">
+              <li class="nav-item">
+                <a class="nav-link active" href="#"
+                  >Inicio <span class="sr-only">(current)</span></a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="servicios">Servicios</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="pricer">Cotizador</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="contacto">Contacto</a>
+              </li>
+            </ul>
+          </div>
+        </nav>
       </header>
     </section>
 
@@ -90,9 +89,9 @@
     </section>
 
     <section id="showcase-servicios">
-      <div class="row">
+      <div class="row row-showcase">
         <div class="col-lg-5 img-servicios">
-          <img src="../resources/img/image-example.png" />
+          <img src="../resources/img/Almacenamiento.png" />
         </div>
         <div class="col-lg-7 desc-servicios">
           <h3>Servicio</h3>
@@ -104,7 +103,7 @@
           </p>
         </div>
       </div>
-      <div class="row">
+      <div class="row row-showcase">
         <div class="col-lg-7 desc-servicios">
           <h3>Servicio</h3>
           <p>
@@ -115,12 +114,12 @@
           </p>
         </div>
         <div class="col-lg-5 img-servicios">
-          <img src="../resources/img/image-example.png" />
+          <img src="../resources/img/Asesoramiento.png" />
         </div>
       </div>
-      <div class="row">
+      <div class="row row-showcase">
         <div class="col-lg-5 img-servicios">
-          <img src="img/image-example.png" />
+          <img src="../resources/img/Dedicados.png" />
         </div>
         <div class="col-lg-7 desc-servicios">
           <h3>Servicio</h3>
@@ -132,7 +131,7 @@
           </p>
         </div>
       </div>
-      <div class="row">
+      <div class="row row-showcase">
         <div class="col-lg-7 desc-servicios">
           <h3>Servicio</h3>
           <p>
@@ -143,12 +142,12 @@
           </p>
         </div>
         <div class="col-lg-5 img-servicios">
-          <img src="../resources/img/image-example.png" />
+          <img src="../resources/img/Paqueteria.png" />
         </div>
       </div>
-      <div class="row">
+      <div class="row row-showcase">
         <div class="col-lg-5 img-servicios">
-          <img src="../resources/img/image-example.png" />
+          <img src="../resources/img/personal.png" />
         </div>
         <div class="col-lg-7 desc-servicios">
           <h3>Servicio</h3>
@@ -158,6 +157,20 @@
             cursus vitae congue mauris rhoncus aenean vel elit. Dignissim
             suspendisse in est ante in nibh mauris.
           </p>
+        </div>
+      </div>
+      <div class="row row-showcase">
+        <div class="col-lg-7 desc-servicios">
+          <h3>Servicio</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. A arcu
+            cursus vitae congue mauris rhoncus aenean vel elit. Dignissim
+            suspendisse in est ante in nibh mauris.
+          </p>
+        </div>
+        <div class="col-lg-5 img-servicios">
+          <img src="../resources/img/renta.png" />
         </div>
       </div>
     </section>
