--- a/index.html
+++ b/index.html
@@ -72,8 +72,11 @@
             Tu solución en logistica <br />
             Excelencia en logística
           </h1>
-          <a class="btn btn-full btn-header btn-header-1" href="#"> Contáctanos </a>
-          <a class="btn btn-full btn-header btn-header-2" href="#"> Cotizador </a>
+          <div class="hero-buttons">
+            <a class="btn btn-full btn-header btn-header-1" href="#"> Contáctanos </a>
+            <a class="btn btn-full btn-header btn-header-2" href="#"> Cotizador </a>
+          </div>
+          
         </div>
       </header>
     </section>
