--- a/servicios/index.html
+++ b/servicios/index.html
@@ -90,10 +90,10 @@
 
     <section id="showcase-servicios">
       <div class="row row-showcase">
-        <div class="col-lg-5 img-servicios">
+        <div class="col-lg-5 img-servicios pos-1">
           <img src="../resources/img/Almacenamiento.png" />
         </div>
-        <div class="col-lg-7 desc-servicios">
+        <div class="col-lg-7 desc-servicios pos-2">
           <h3>Servicio</h3>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
@@ -104,7 +104,7 @@
         </div>
       </div>
       <div class="row row-showcase">
-        <div class="col-lg-7 desc-servicios">
+        <div class="col-lg-7 desc-servicios pos-3">
           <h3>Servicio</h3>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
@@ -113,15 +113,15 @@
             suspendisse in est ante in nibh mauris.
           </p>
         </div>
-        <div class="col-lg-5 img-servicios">
+        <div class="col-lg-5 img-servicios pos-4">
           <img src="../resources/img/Asesoramiento.png" />
         </div>
       </div>
       <div class="row row-showcase">
-        <div class="col-lg-5 img-servicios">
+        <div class="col-lg-5 img-servicios pos-5">
           <img src="../resources/img/Dedicados.png" />
         </div>
-        <div class="col-lg-7 desc-servicios">
+        <div class="col-lg-7 desc-servicios pos-6">
           <h3>Servicio</h3>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
@@ -132,7 +132,7 @@
         </div>
       </div>
       <div class="row row-showcase">
-        <div class="col-lg-7 desc-servicios">
+        <div class="col-lg-7 desc-servicios pos-7">
           <h3>Servicio</h3>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
@@ -141,15 +141,15 @@
             suspendisse in est ante in nibh mauris.
           </p>
         </div>
-        <div class="col-lg-5 img-servicios">
+        <div class="col-lg-5 img-servicios pos-8">
           <img src="../resources/img/Paqueteria.png" />
         </div>
       </div>
       <div class="row row-showcase">
-        <div class="col-lg-5 img-servicios">
+        <div class="col-lg-5 img-servicios pos-9">
           <img src="../resources/img/personal.png" />
         </div>
-        <div class="col-lg-7 desc-servicios">
+        <div class="col-lg-7 desc-servicios pos-10">
           <h3>Servicio</h3>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
@@ -160,7 +160,7 @@
         </div>
       </div>
       <div class="row row-showcase">
-        <div class="col-lg-7 desc-servicios">
+        <div class="col-lg-7 desc-servicios pos-11">
           <h3>Servicio</h3>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
@@ -169,7 +169,7 @@
             suspendisse in est ante in nibh mauris.
           </p>
         </div>
-        <div class="col-lg-5 img-servicios">
+        <div class="col-lg-5 img-servicios pos-12">
           <img src="../resources/img/renta.png" />
         </div>
       </div>
