--- a/contacto/index.html
+++ b/contacto/index.html
@@ -22,6 +22,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="queries.css" />
     <!--===============================================================================================-->
     <link
       rel="stylesheet"
@@ -53,47 +54,45 @@
     <!--===============================================================================================-->
   </head>
   <body>
-    <!-- HERO IMAGE / VIDEO -->
-    <section id="hero">
+     <!-- HERO IMAGE / VIDEO -->
+     <section id="hero">
       <header>
-        <div class="container-fluid">
-          <nav class="navbar sticky-top navbar-expand-lg ">
-            <img
-              class="navbar-brand logo"
-              src="../resources/img/IMG-0246.PNG"
-            />
-            <button
-              class="navbar-toggler"
-              type="button"
-              data-toggle="collapse"
-              data-target="#navbarSupportedContent"
-              aria-controls="navbarSupportedContent"
-              aria-expanded="false"
-              aria-label="Toggle navigation"
-            >
-              <span class="navbar-toggler-icon"></span>
-            </button>
+        <nav class="navbar navbar-expand-lg sticky-top navbar-light">
+          <img
+            class="navbar-brand logo"
+            src="../resources/img/IMG-0246.PNG"
+          />
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-toggle="collapse"
+            data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
 
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav ml-auto">
-                <li class="nav-item active">
-                  <a class="nav-link" href="/"
-                    >Inicio <span class="sr-only">(current)</span></a
-                  >
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="../servicios">Servicios</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Cotizador</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="contacto">Contacto</a>
-                </li>
-              </ul>
-            </div>
-          </nav>
-        </div>
+          <div class=" collapse sticky-top navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ml-auto">
+              <li class="nav-item">
+                <a class="nav-link active" href="#"
+                  >Inicio <span class="sr-only">(current)</span></a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="servicios">Servicios</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="pricer">Cotizador</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="contacto">Contacto</a>
+              </li>
+            </ul>
+          </div>
+        </nav>
       </header>
     </section>
 
@@ -192,7 +191,6 @@
           <ul class="footer-nav">
             <li><a href="#"> Inicio </a></li>
             <li><a href="#"> Servicios</a></li>
-            <li><a href="#"> Socios Comerciales</a></li>
             <li><a href="#"> Cotizador</a></li>
             <li><a href="#"> Contacto</a></li>
           </ul>
@@ -235,6 +233,21 @@
     <script src="vendor/select2/select2.min.js"></script>
     <!--===============================================================================================-->
     <script src="js/main.js"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+      crossorigin="anonymous"
+    ></script>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
