--- a/servicios/index.html
+++ b/servicios/index.html
@@ -48,7 +48,7 @@
           <div class=" collapse sticky-top navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
               <li class="nav-item">
-                <a class="nav-link active" href="#"
+                <a class="nav-link active" href="/"
                   >Inicio <span class="sr-only">(current)</span></a
                 >
               </li>
