nav bar - logo link

--- a/index.html
+++ b/index.html
@@ -30,10 +30,7 @@
       <header>
         
           <nav class="navbar navbar-expand-lg sticky-top navbar-dark">
-            <img
-              class="navbar-brand logo"
-              src="resources/img/Logo-Blanco-Exvasa.png"
-            />
+            <a href="/"> <img class="navbar-brand logo" src="resources/img/Logo-Blanco-Exvasa.png"/></a>
             <button
               class="navbar-toggler"
               type="button"
