--- a/contacto/index.html
+++ b/contacto/index.html
@@ -58,10 +58,10 @@
      <section id="hero">
       <header>
         <nav class="navbar navbar-expand-lg sticky-top navbar-light">
-          <img
-            class="navbar-brand logo"
-            src="../resources/img/IMG-0246.PNG"
-          />
+          <a href="/"><img 
+            class="navbar-brand logo" 
+            src="../resources/img/IMG-0246.PNG"/>
+        </a>
           <button
             class="navbar-toggler"
             type="button"
