--- a/pricer/index.html
+++ b/pricer/index.html
@@ -28,10 +28,10 @@
   <body>
     <div class="container-fluid form-container">
       <nav class="navbar navbar-expand-lg ">
-        <img
-          class="navbar-brand logo"
-          src="../resources/img/Logo-Blanco-Exvasa.png"
-        />
+        <a href="/"><img 
+            class="navbar-brand logo" 
+            src="../resources/img/IMG-0246.PNG"/>
+        </a>
         <button
           class="navbar-toggler"
           type="button"
