--- a/servicios/index.html
+++ b/servicios/index.html
@@ -29,10 +29,7 @@
     <section id="hero">
       <header>
         <nav class="navbar navbar-expand-lg sticky-top navbar-light">
-          <img
-            class="navbar-brand logo"
-            src="../resources/img/IMG-0246.PNG"
-          />
+          <a href="/"><img class="navbar-brand logo" src="../resources/img/IMG-0246.PNG"/></a>
           <button
             class="navbar-toggler"
             type="button"
