--- a/servicios/index.html
+++ b/servicios/index.html
@@ -45,18 +45,18 @@
           <div class=" collapse sticky-top navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
               <li class="nav-item">
-                <a class="nav-link active" href="/"
+                <a class="nav-link active" href="../index.html"
                   >Inicio <span class="sr-only">(current)</span></a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="servicios">Servicios</a>
+                <a class="nav-link" href="../servicios">Servicios</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="pricer">Cotizador</a>
+                <a class="nav-link" href="/">Cotizador</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="contacto">Contacto</a>
+                <a class="nav-link" href="../contacto">Contacto</a>
               </li>
             </ul>
           </div>
@@ -176,10 +176,10 @@
       <div class="row">
         <div class=" col-lg-6">
           <ul class="footer-nav">
-            <li><a href="#"> Inicio </a></li>
-            <li><a href="#"> Servicios</a></li>
-            <li><a href="#"> Cotizador</a></li>
-            <li><a href="#"> Contacto</a></li>
+            <li><a href="../"> Inicio </a></li>
+            <li><a href="../servicios"> Servicios</a></li>
+            <li><a href="/"> Cotizador</a></li>
+            <li><a href="../contacto/"> Contacto</a></li>
           </ul>
         </div>
 
