correción en todos los links

--- a/contacto/index.html
+++ b/contacto/index.html
@@ -77,18 +77,18 @@
           <div class=" collapse sticky-top navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
               <li class="nav-item">
-                <a class="nav-link active" href="#"
+                <a class="nav-link active" href="/"
                   >Inicio <span class="sr-only">(current)</span></a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="servicios">Servicios</a>
+                <a class="nav-link" href="../servicios">Servicios</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="pricer">Cotizador</a>
+                <a class="nav-link" href="../cotizador/">Cotizador</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="contacto">Contacto</a>
+                <a class="nav-link" href="#">Contacto</a>
               </li>
             </ul>
           </div>
@@ -189,9 +189,9 @@
       <div class="row">
         <div class=" col-lg-6">
           <ul class="footer-nav">
-            <li><a href="#"> Inicio </a></li>
-            <li><a href="#"> Servicios</a></li>
-            <li><a href="#"> Cotizador</a></li>
+            <li><a href="/"> Inicio </a></li>
+            <li><a href="../servicios/"> Servicios</a></li>
+            <li><a href="../cotizador/"> Cotizador</a></li>
             <li><a href="#"> Contacto</a></li>
           </ul>
         </div>
