--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                   <a class="nav-link" href="servicios">Servicios</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="pricer">Cotizador</a>
+                  <a class="nav-link" href="cotizador/">Cotizador</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="contacto">Contacto</a>
@@ -318,9 +318,9 @@
         <div class=" col-lg-6 col-md-6 col-sm-12 footer-box">
           <ul class="footer-nav">
             <li><a href="#"> Inicio </a></li>
-            <li><a href="#"> Servicios</a></li>
-            <li><a href="#"> Cotizador</a></li>
-            <li><a href="#"> Contacto</a></li>
+            <li><a href="servicios/"> Servicios</a></li>
+            <li><a href="cotizador/"> Cotizador</a></li>
+            <li><a href="contacto/"> Contacto</a></li>
           </ul>
         </div>
 
