--- a/cotizador/index.html
+++ b/cotizador/index.html
@@ -46,7 +46,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="../index.html"
+              <a class="nav-link" href="../"
                 >Inicio <span class="sr-only">(current)</span></a
               >
             </li>
@@ -242,10 +242,10 @@
       <div class="row">
         <div class="col-lg-6">
           <ul class="footer-nav">
-            <li><a href="#"> Inicio </a></li>
-            <li><a href="#"> Servicios</a></li>
+            <li><a href="../"> Inicio </a></li>
+            <li><a href="../servicios/"> Servicios</a></li>
             <li><a href="#"> Cotizador</a></li>
-            <li><a href="#"> Contacto</a></li>
+            <li><a href="../contacto/"> Contacto</a></li>
           </ul>
         </div>
 
