--- a/servicios/index.html
+++ b/servicios/index.html
@@ -45,15 +45,15 @@
           <div class=" collapse sticky-top navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
               <li class="nav-item">
-                <a class="nav-link active" href="../index.html"
+                <a class="nav-link active" href="../"
                   >Inicio <span class="sr-only">(current)</span></a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="../servicios">Servicios</a>
+                <a class="nav-link" href="#">Servicios</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/">Cotizador</a>
+                <a class="nav-link" href="../cotizador/">Cotizador</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="../contacto">Contacto</a>
@@ -178,7 +178,7 @@
           <ul class="footer-nav">
             <li><a href="../"> Inicio </a></li>
             <li><a href="../servicios"> Servicios</a></li>
-            <li><a href="/"> Cotizador</a></li>
+            <li><a href="../cotizador/"> Cotizador</a></li>
             <li><a href="../contacto/"> Contacto</a></li>
           </ul>
         </div>
