links en botones

--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
             Excelencia en logística
           </h1>
           <div class="hero-buttons">
-            <a class="btn btn-full btn-header btn-header-1" href="#"> Contáctanos </a>
-            <a class="btn btn-full btn-header btn-header-2" href="#"> Cotizador </a>
+            <a class="btn btn-full btn-header btn-header-1" href="contacto/"> Contáctanos </a>
+            <a class="btn btn-full btn-header btn-header-2" href="cotizador/"> Cotizador </a>
           </div>
           
         </div>
