--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <section id="about-us" class="js--section-features">
       <div class="container-fluid">
         <h2 class="section-title">
-          Adoptamos la filosofía del "justo a tiempo"
+          Acerca de nosotros
         </h2>
         <span class="divider"></span>
         <div class="row about-us-row">
@@ -90,14 +90,16 @@
           </div>
           <div class="col-lg-6  about-us-col about-us-col-2">
             <p class="about-us-text">
-              Exvasa cuenta con mas de 50 años de experiencia en la industria
-              del transporte terrestre, teniendo como prioridad la satisfacción
-              de nuestros clientes por medio de sociedades estratégicas.
+              Express Valle de Saltillo nace en 1951, fundada por Ernesto Sánchez Valdés,
+              un empresario orgullosamente coahuilense quien era apasionado por la 
+              industria de la transportación y la logística.
               <br /><br />
-              Somos una compañía dinámica, flexible y versátil que se adecua a
-              todos los sistemas de calidad, adoptando estas normas para ser
-              competitivos bajo la filosofía de "Justo a Tiempo" nuestras reglas
-              se rigen bajo normas de certificación y en progreso de CT-PAT.
+              Con más de 50 años de experiencia, EXVASA ha logrado posicionarse como una 
+              empresa caracterizada por brindar la excelencia a todos sus clientes a través 
+              de relaciones estratégicas y procesos de mejora continua. 
+              <br><br>
+              En la actualidad contamos con diversos servicios que nos permiten ser tu mejor 
+              aliado en logística que van desde el transporte de carga terrestre hasta transporte de personal
             </p>
           </div>
         </div>
@@ -142,20 +144,15 @@
     </section>
 
     <section id="testimonials">
-      <h2 class="section-title">Nuestros Clientes</h2>
+      <h2 class="section-title">Nuestros socios comerciales</h2>
       <span class="divider-white"></span>
       <div class="container-fluid">
         <div class="row">
           <div class="col-lg-12 texto-nuestros-clientes">
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. A arcu
-              cursus vitae congue mauris rhoncus aenean vel elit. Dignissim
-              suspendisse in est ante in nibh mauris. <br />
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. A arcu
-              cursus vitae congue mauris rhoncus aenean vel elit. Dignissim
-              suspendisse in est ante in nibh mauris.
+              En Express Valle de Saltillo contamos con experiencia en distintas 
+              industrias, brindando  servicio a socios comerciales que van desde 
+              el ramo manufacturero hasta la comercialización de producto terminado.
             </p>
           </div>
         </div>
@@ -327,13 +324,7 @@
         <div class="col-lg-6 col-md-6 col-sm-12 social-box">
           <ul class="social-links">
             <li>
-              <a href="#"><i class="fab fa-facebook-f"></i></a>
-            </li>
-            <li>
-              <a href="#"><i class="fab fa-twitter"></i></a>
-            </li>
-            <li>
-              <a href="#"><i class="fab fa-instagram"></i></a>
+              <a href="https://www.facebook.com/exvasa/" target="_blank"><i class="fab fa-facebook-f"></i></a>
             </li>
           </ul>
         </div>
