--- a/cotizador/index.html
+++ b/cotizador/index.html
@@ -297,14 +297,9 @@
         <div class="col-lg-6">
           <ul class="social-links">
             <li>
-              <a href="#"><i class="fab fa-facebook-f"></i></a>
+              <a href="https://www.facebook.com/exvasa/" target="_blank"><i class="fab fa-facebook-f"></i></a>
             </li>
-            <li>
-              <a href="#"><i class="fab fa-twitter"></i></a>
-            </li>
-            <li>
-              <a href="#"><i class="fab fa-instagram"></i></a>
-            </li>
+            
           </ul>
         </div>
         <div class="row">
