--- a/servicios/index.html
+++ b/servicios/index.html
@@ -91,23 +91,21 @@
           <img src="../resources/img/Almacenamiento-serv.png" />
         </div>
         <div class="col-lg-7 desc-servicios pos-2">
-          <h3>Servicio</h3>
+          <h3>Almacenamiento</h3>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. A arcu
-            cursus vitae congue mauris rhoncus aenean vel elit. Dignissim
-            suspendisse in est ante in nibh mauris.
+            Contamos con bodegas en nuestras oficinas de Saltillo y la Ciudad de México, 
+            que nos permiten almacenar mercancía de manera segura y confiable para comodidad 
+            de nuestros socios comerciales. 
           </p>
         </div>
       </div>
       <div class="row row-showcase">
         <div class="col-lg-7 desc-servicios pos-3">
-          <h3>Servicio</h3>
+          <h3>Asesoramiento</h3>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. A arcu
-            cursus vitae congue mauris rhoncus aenean vel elit. Dignissim
-            suspendisse in est ante in nibh mauris.
+            Nuestro equipo de trabajo especializado nos permite asesorarte para diseñar e implementar 
+            soluciones logísticas a la medida de tu empresa. Una vez implementado tu sistema de logística, 
+            damos seguimiento puntual para resolver cualquier duda o petición que surja durante el camino.
           </p>
         </div>
         <div class="col-lg-5 img-servicios pos-4">
@@ -119,23 +117,21 @@
           <img src="../resources/img/Dedicados-serv.png" />
         </div>
         <div class="col-lg-7 desc-servicios pos-6">
-          <h3>Servicio</h3>
+          <h3>Transporte Dedicado</h3>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. A arcu
-            cursus vitae congue mauris rhoncus aenean vel elit. Dignissim
-            suspendisse in est ante in nibh mauris.
+            En EXVASA ponemos al servicio de tu empresa, nuestra flotilla de camiones para el transporte de 
+            carga terrestre nacional. Nuestra amplia experiencia y certificaciones como ISO:9001 nos 
+            permiten cumplir con entregas puntuales a todo el territorio nacional.
           </p>
         </div>
       </div>
       <div class="row row-showcase">
         <div class="col-lg-7 desc-servicios pos-7">
-          <h3>Servicio</h3>
+          <h3>Paquetería</h3>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. A arcu
-            cursus vitae congue mauris rhoncus aenean vel elit. Dignissim
-            suspendisse in est ante in nibh mauris.
+            Uno de los servicios más solicitados. Ofrecemos la oportunidad de transportar todo tipo de 
+            carga desde Ciudad de México a la ciudad de Saltillo, Coahuila. Ideal para negocios de 
+            cualquier tamaño que buscan minimizar gastos de traslado, así como particulares. 
           </p>
         </div>
         <div class="col-lg-5 img-servicios pos-8">
@@ -147,23 +143,20 @@
           <img src="../resources/img/personal-serv.png" />
         </div>
         <div class="col-lg-7 desc-servicios pos-10">
-          <h3>Servicio</h3>
+          <h3>Transporte de personal</h3>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. A arcu
-            cursus vitae congue mauris rhoncus aenean vel elit. Dignissim
-            suspendisse in est ante in nibh mauris.
+            Nuestro servicio de transporte colectivo para empleados. Diseñamos rutas y recorridos 
+            flexibles que se adecúen a las necesidades específicas de tu equipo de trabajo. 
           </p>
         </div>
       </div>
       <div class="row row-showcase">
         <div class="col-lg-7 desc-servicios pos-11">
-          <h3>Servicio</h3>
+          <h3>Renta de remolques</h3>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. A arcu
-            cursus vitae congue mauris rhoncus aenean vel elit. Dignissim
-            suspendisse in est ante in nibh mauris.
+            Accede a nuestra flotilla de remolques de 53 pies a través del servicio de renta de 
+            equipo. Recibimos solicitudes para renta de remolques por una duración desde 24 horas 
+            hasta más de un mes.
           </p>
         </div>
         <div class="col-lg-5 img-servicios pos-12">
@@ -186,13 +179,7 @@
         <div class="col-lg-6">
           <ul class="social-links">
             <li>
-              <a href="#"><i class="fab fa-facebook-f"></i></a>
-            </li>
-            <li>
-              <a href="#"><i class="fab fa-twitter"></i></a>
-            </li>
-            <li>
-              <a href="#"><i class="fab fa-instagram"></i></a>
+              <a href="https://www.facebook.com/exvasa/" target="_blank"><i class="fab fa-facebook-f"></i></a>
             </li>
           </ul>
         </div>
