--- a/cotizador/index.html
+++ b/cotizador/index.html
@@ -72,7 +72,7 @@
             id="form"
             class="my-form"
             method="POST"
-            action="mailapi.exvasa.now.sh/submit"
+            action="https://mailapi.exvasa.now.sh/submit"
             onsubmit="return false;"
           >
             <p>¿El articulo viaja en tarima?</p>
