cambio de imagenes + nuevo orden de imágenes en home

--- a/index.html
+++ b/index.html
@@ -110,24 +110,12 @@
       <ul class="soluciones-showcase clearfix">
         <li>
           <figure class="soluciones-img">
-            <img src="resources/img/Almacenamiento.png" />
-          </figure>
-        </li>
-        <li>
-          <figure class="soluciones-img">
-            <img src="resources/img/Asesoramiento.png" />
-          </figure>
-        </li>
-        <li>
-          <figure class="soluciones-img">
             <img src="resources/img/Dedicados.png" />
           </figure>
         </li>
-      </ul>
-      <ul class="soluciones-showcase clearfix">
         <li>
           <figure class="soluciones-img">
-              <img src="resources/img/Paqueteria.png" />
+            <img src="resources/img/Paqueteria.png" />
           </figure>
         </li>
         <li>
@@ -135,9 +123,21 @@
             <img src="resources/img/personal.png" />
           </figure>
         </li>
+      </ul>
+      <ul class="soluciones-showcase clearfix">
         <li>
           <figure class="soluciones-img">
-            <img src="resources/img/renta.png" />
+              <img src="resources/img/renta.png" />
+          </figure>
+        </li>
+        <li>
+          <figure class="soluciones-img">
+            <img src="resources/img/Almacenamiento.png" />
+          </figure>
+        </li>
+        <li>
+          <figure class="soluciones-img">
+            <img src="resources/img/Asesoramiento.png" />
           </figure>
         </li>
       </ul>
@@ -238,7 +238,7 @@
         <div class="mapa col-lg-5 col-md-12">
           <iframe
             id="ubicacion1"
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3595.7612403273897!2d-100.37164808457119!3d25.679208283674285!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x86629618fd598e2b%3A0xa1c35f57b2e34240!2sAv.+Anillo+Periferico+409%2C+Rinc%C3%B3n+de+Las+Colinas%2C+64633+Monterrey%2C+N.L.!5e0!3m2!1ses-419!2smx!4v1564011219277!5m2!1ses-419!2smx"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d640.630925914026!2d-100.91157975835006!3d25.435471954451053!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x86880df2e1443d87%3A0xf0a00df66880a0e8!2sBlvrd.%20Convenciones%20201%2C%20Puerta%20del%20Oriente%2C%2025016%20Saltillo%2C%20Coah.!5e0!3m2!1ses-419!2smx!4v1570550021318!5m2!1ses-419!2smx" 
             width="100%"
             height="100%"
             frameborder="0"
